@@ -38,7 +38,6 @@ import static org.apache.camel.component.exec.ExecBinding.EXEC_COMMAND_ARGS;
 import static org.apache.camel.component.exec.ExecBinding.EXEC_COMMAND_EXECUTABLE;
 import static org.apache.camel.component.exec.ExecBinding.EXEC_COMMAND_TIMEOUT;
 import static org.apache.camel.component.exec.ExecBinding.EXEC_COMMAND_WORKING_DIR;
-import static org.apache.commons.io.IOUtils.LINE_SEPARATOR;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
@@ -47,7 +46,7 @@ import static org.junit.jupiter.api.Assertions.assertNull;
  * Test the functionality of {@link ExecProducer}
  */
 @CamelSpringTest
-@ContextConfiguration(locations = {"exec-mock-executor-context.xml"})
+@ContextConfiguration(locations = { "exec-mock-executor-context.xml" })
 public class ExecProducerTest {
 
     @Produce("direct:input")
@@ -86,7 +85,7 @@ public class ExecProducerTest {
     @Test
     @DirtiesContext
     public void testOverrideArgs() {
-        final String[] args = {"-version", "classpath:c:/program files/test/"};
+        final String[] args = { "-version", "classpath:c:/program files/test/" };
         producerTemplate.send(new Processor() {
 
             public void process(Exchange exchange) throws Exception {
@@ -117,21 +116,22 @@ public class ExecProducerTest {
     @DirtiesContext
     public void testInputLines() throws IOException {
         // String must be convertible to InputStream
-        final String input = "line1" + LINE_SEPARATOR + "line2";
+        final String input = "line1" + System.lineSeparator() + "line2";
         producerTemplate.send(new Processor() {
 
             public void process(Exchange exchange) throws Exception {
                 exchange.getIn().setBody(input);
             }
         });
-        assertEquals(input, IOUtils.toString(execCommandExecutorMock.lastCommandResult.getCommand().getInput(), Charset.defaultCharset()));
+        assertEquals(input,
+                IOUtils.toString(execCommandExecutorMock.lastCommandResult.getCommand().getInput(), Charset.defaultCharset()));
     }
 
     @Test
     @DirtiesContext
     public void testInputLinesNotConvertibleToInputStream() throws IOException {
         // String must be convertible to InputStream
-        final Integer notConvertibleToInputStreamBody = new Integer(1);
+        final Integer notConvertibleToInputStreamBody = Integer.valueOf(1);
         Exchange e = producerTemplate.send(new Processor() {
 
             public void process(Exchange exchange) throws Exception {
@@ -142,7 +142,7 @@ public class ExecProducerTest {
         assertNotNull(result);
         assertNull(result.getCommand().getInput());
     }
-    
+
     @Test
     @DirtiesContext
     public void testNullInBody() throws IOException {
