@@ -62,7 +62,7 @@ public class SmppProducerLazySessionCreationTest {
     @Test
     public void processShouldCreateTheSmppSession() throws Exception {
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://smppclient@localhost:2775");
+                .thenReturn("smpp://smppclient@localhost:2775");
         BindParameter expectedBindParameter = new BindParameter(
                 BindType.BIND_TX,
                 "smppclient",
@@ -71,8 +71,8 @@ public class SmppProducerLazySessionCreationTest {
                 TypeOfNumber.UNKNOWN,
                 NumberingPlanIndicator.UNKNOWN,
                 "");
-        when(session.connectAndBind("localhost", new Integer(2775), expectedBindParameter))
-            .thenReturn("1");
+        when(session.connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter))
+                .thenReturn("1");
         when(endpoint.isSingleton()).thenReturn(true);
         SmppBinding binding = mock(SmppBinding.class);
         Exchange exchange = mock(Exchange.class);
@@ -91,13 +91,13 @@ public class SmppProducerLazySessionCreationTest {
         verify(session).setEnquireLinkTimer(5000);
         verify(session).setTransactionTimer(10000);
         verify(session).addSessionStateListener(isA(SessionStateListener.class));
-        verify(session).connectAndBind("localhost", new Integer(2775), expectedBindParameter);
+        verify(session).connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter);
     }
 
     @Test
     public void processShouldCreateTheSmppSessionWithTheSystemIdAndPasswordFromTheExchange() throws Exception {
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://localhost:2775");
+                .thenReturn("smpp://localhost:2775");
         BindParameter expectedBindParameter = new BindParameter(
                 BindType.BIND_TX,
                 "smppclient2",
@@ -106,8 +106,8 @@ public class SmppProducerLazySessionCreationTest {
                 TypeOfNumber.UNKNOWN,
                 NumberingPlanIndicator.UNKNOWN,
                 "");
-        when(session.connectAndBind("localhost", new Integer(2775), expectedBindParameter))
-            .thenReturn("1");
+        when(session.connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter))
+                .thenReturn("1");
         SmppBinding binding = mock(SmppBinding.class);
         Exchange exchange = mock(Exchange.class);
         Message in = mock(Message.class);
@@ -123,6 +123,6 @@ public class SmppProducerLazySessionCreationTest {
         producer.doStart();
         producer.process(exchange);
 
-        verify(session).connectAndBind("localhost", new Integer(2775), expectedBindParameter);
+        verify(session).connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter);
     }
 }
