@@ -33,14 +33,14 @@ import org.apache.thrift.async.AsyncMethodCallback;
 public class CalculatorAsyncServerImpl implements Calculator.AsyncIface {
 
     @Override
-    @SuppressWarnings({"rawtypes", "unchecked"})
+    @SuppressWarnings({ "rawtypes", "unchecked" })
     public void ping(AsyncMethodCallback resultHandler) throws TException {
         resultHandler.onComplete(new Object());
     }
 
     @Override
     public void add(int num1, int num2, AsyncMethodCallback<Integer> resultHandler) throws TException {
-        resultHandler.onComplete(new Integer(num1 + num2));
+        resultHandler.onComplete(Integer.valueOf(num1 + num2));
     }
 
     @Override
@@ -75,7 +75,7 @@ public class CalculatorAsyncServerImpl implements Calculator.AsyncIface {
     }
 
     @Override
-    @SuppressWarnings({"rawtypes", "unchecked"})
+    @SuppressWarnings({ "rawtypes", "unchecked" })
     public void zip(AsyncMethodCallback resultHandler) throws TException {
         resultHandler.onComplete(new Object());
     }
@@ -86,9 +86,11 @@ public class CalculatorAsyncServerImpl implements Calculator.AsyncIface {
     }
 
     @Override
-    public void alltypes(boolean v1, byte v2, short v3, int v4, long v5, double v6, String v7, ByteBuffer v8, Work v9, List<Integer> v10, Set<String> v11, Map<String, Long> v12,
-                         AsyncMethodCallback<Integer> resultHandler)
+    public void alltypes(
+            boolean v1, byte v2, short v3, int v4, long v5, double v6, String v7, ByteBuffer v8, Work v9, List<Integer> v10,
+            Set<String> v11, Map<String, Long> v12,
+            AsyncMethodCallback<Integer> resultHandler)
             throws TException {
-        resultHandler.onComplete(new Integer(1));
+        resultHandler.onComplete(Integer.valueOf(1));
     }
 }
