@@ -25,8 +25,7 @@ import org.apache.camel.component.twitter.timeline.TwitterTimelineEndpoint;
 import org.apache.camel.impl.DefaultCamelContext;
 import org.junit.jupiter.api.Test;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 public class UriConfigurationTest {
 
@@ -39,28 +38,30 @@ public class UriConfigurationTest {
         assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
         TwitterSearchEndpoint twitterEndpoint = (TwitterSearchEndpoint) endpoint;
 
-        assertTrue(!twitterEndpoint.getProperties().getConsumerKey().isEmpty());
-        assertTrue(!twitterEndpoint.getProperties().getConsumerSecret().isEmpty());
-        assertTrue(!twitterEndpoint.getProperties().getAccessToken().isEmpty());
-        assertTrue(!twitterEndpoint.getProperties().getAccessTokenSecret().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getConsumerKey().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getConsumerSecret().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getAccessToken().isEmpty());
+        assertFalse(twitterEndpoint.getProperties().getAccessTokenSecret().isEmpty());
     }
-    
+
     @Test
     public void testPageSetting() throws Exception {
         Endpoint endpoint = context.getEndpoint("twitter-search:foo?count=50&numberOfPages=2&" + support.getUriTokens());
         assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
         TwitterSearchEndpoint twitterEndpoint = (TwitterSearchEndpoint) endpoint;
 
-        assertEquals(new Integer(50), twitterEndpoint.getProperties().getCount());
-        assertEquals(new Integer(2), twitterEndpoint.getProperties().getNumberOfPages());
+        assertEquals(Integer.valueOf(50), twitterEndpoint.getProperties().getCount());
+        assertEquals(Integer.valueOf(2), twitterEndpoint.getProperties().getNumberOfPages());
     }
-    
+
     @Test
     public void testHttpProxySetting() throws Exception {
-        Endpoint endpoint = context.getEndpoint("twitter-search:foo?httpProxyHost=example.com&httpProxyPort=3338&httpProxyUser=test&httpProxyPassword=pwd&" + support.getUriTokens());
+        Endpoint endpoint = context.getEndpoint(
+                "twitter-search:foo?httpProxyHost=example.com&httpProxyPort=3338&httpProxyUser=test&httpProxyPassword=pwd&"
+                                                + support.getUriTokens());
         assertTrue(endpoint instanceof TwitterSearchEndpoint, "Endpoint not a TwitterSearchEndpoint: " + endpoint);
         TwitterSearchEndpoint twitterEndpoint = (TwitterSearchEndpoint) endpoint;
-        
+
         assertEquals("example.com", twitterEndpoint.getProperties().getHttpProxyHost());
         assertEquals(Integer.valueOf(3338), twitterEndpoint.getProperties().getHttpProxyPort());
         assertEquals("test", twitterEndpoint.getProperties().getHttpProxyUser());
@@ -70,7 +71,8 @@ public class UriConfigurationTest {
     @Test
     public void testDirectMessageEndpoint() throws Exception {
         Endpoint endpoint = context.getEndpoint("twitter-directmessage:foo?" + support.getUriTokens());
-        assertTrue(endpoint instanceof TwitterDirectMessageEndpoint, "Endpoint not a TwitterDirectMessageEndpoint: " + endpoint);
+        assertTrue(endpoint instanceof TwitterDirectMessageEndpoint,
+                "Endpoint not a TwitterDirectMessageEndpoint: " + endpoint);
     }
 
     @Test
@@ -90,19 +92,19 @@ public class UriConfigurationTest {
 
         Endpoint endpoint = context.getEndpoint("twitter-timeline:home");
         assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
-        TwitterTimelineEndpoint timelineEndpoint = (TwitterTimelineEndpoint)endpoint;
+        TwitterTimelineEndpoint timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
         assertEquals(TimelineType.HOME, timelineEndpoint.getTimelineType());
         endpoint = context.getEndpoint("twitter-timeline:mentions");
         assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
-        timelineEndpoint = (TwitterTimelineEndpoint)endpoint;
+        timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
         assertEquals(TimelineType.MENTIONS, timelineEndpoint.getTimelineType());
         endpoint = context.getEndpoint("twitter-timeline:retweetsofme");
         assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
-        timelineEndpoint = (TwitterTimelineEndpoint)endpoint;
+        timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
         assertEquals(TimelineType.RETWEETSOFME, timelineEndpoint.getTimelineType());
         endpoint = context.getEndpoint("twitter-timeline:user");
         assertTrue(endpoint instanceof TwitterTimelineEndpoint, "Endpoint not a TwitterTimelineEndpoint: " + endpoint);
-        timelineEndpoint = (TwitterTimelineEndpoint)endpoint;
+        timelineEndpoint = (TwitterTimelineEndpoint) endpoint;
         assertEquals(TimelineType.USER, timelineEndpoint.getTimelineType());
     }
 }
